<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="0.5dp"
    android:background="@drawable/border_top_bottom">


    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/avatarImage"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textColor="@color/black"
        tools:text="@string/UserName" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColor="@color/black"
        tools:text="This is tweet 101" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvUserName"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/black"
        tools:text="@string/sampleTime" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:layout_toStartOf="@+id/tvDate"
        android:layout_toEndOf="@+id/tvUserName"
        tools:text="@string/screenName" />

    <ImageView
        android:id="@+id/ivComment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentStart="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/add_tweet"
        app:srcCompat="@android:drawable/sym_action_chat" />

    <ImageView
        android:id="@+id/ivRetweet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tvBody"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="4dp"
        android:layout_toStartOf="@+id/ivHeart"
        android:layout_toEndOf="@+id/ivComment"
        android:contentDescription="@string/retweet"
        app:srcCompat="@drawable/retweet" />

    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/likes"
        app:srcCompat="@drawable/heart" />


</RelativeLayout>

